WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307492
[Site Isolation] Visibility is not always propagated to all iframe processes
https://bugs.webkit.org/show_bug.cgi?id=307492
Summary
[Site Isolation] Visibility is not always propagated to all iframe processes
Per Arne Vollan
Reported
2026-02-10 16:33:36 PST
Visibility is not always propagated to all iframe processes on iOS.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-10 16:33:45 PST
<
rdar://problem/170099676
>
Per Arne Vollan
Comment 2
2026-02-10 16:36:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58349
EWS
Comment 3
2026-02-12 14:07:39 PST
Committed
307398@main
(d38519318cc7): <
https://commits.webkit.org/307398@main
> Reviewed commits have been landed. Closing PR #58349 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug