[Site Isolation] Visibility is not always propagated to all iframe processes https://bugs.webkit.org/show_bug.cgi?id=307492 rdar://170099676

Reviewed by Sihui Liu.

Notify the page client and WK content view when a process for Site Isolation is being used.

* Source/WebKit/UIProcess/PageClient.h:
(WebKit::PageClient::didStartUsingProcessForSiteIsolation):
(WebKit::PageClient::didStopUsingProcessForSiteIsolation):
* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::RemotePageProxy):
(WebKit::RemotePageProxy::~RemotePageProxy):
* Source/WebKit/UIProcess/ios/PageClientImplIOS.h:
* Source/WebKit/UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::didStartUsingProcessForSiteIsolation):
(WebKit::PageClientImpl::didStopUsingProcessForSiteIsolation):
* Source/WebKit/UIProcess/ios/WKContentView.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _installVisibilityPropagationViews]):
(-[WKContentView _setupVisibilityPropagationForWebProcess:]):
(-[WKContentView _removeVisibilityPropagationForWebProcess:]):
(-[WKContentView _setupVisibilityPropagationForAllWebProcesses]):
(-[WKContentView _didRelaunchProcess]):
(-[WKContentView _didStartUsingProcessForSiteIsolation:]):
(-[WKContentView _didStopUsingProcessForSiteIsolation:]):
(-[WKContentView _webProcessDidCreateContextForVisibilityPropagation]):
(-[WKContentView _createVisibilityPropagationView]):
(-[WKContentView _setupVisibilityPropagationForWebProcess]): Deleted.

Canonical link: https://commits.webkit.org/307398@main