Source/WebKit/UIProcess/ios/PageClientImplIOS.h
@@ -87,6 +87,8 @@ private:
     void processDidExit() override;
     void processWillSwap() override;
     void didRelaunchProcess() override;
+    void didStartUsingProcessForSiteIsolation(WebProcessProxy&) override;
+    void didStopUsingProcessForSiteIsolation(WebProcessProxy&) override;
 
 #if HAVE(VISIBILITY_PROPAGATION_VIEW)
     void didCreateContextInWebProcessForVisibilityPropagation(LayerHostingContextID) override;
